--- a/app/parts/about.html
+++ b/app/parts/about.html
@@ -1,4 +1,4 @@
-<div class="about__wrapper">
+<div class="about__wrapper" id="about">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-12">
@@ -14,7 +14,7 @@
             <li>Создание Web-сайтов</li>
           </ul>
         </div>
-        <a href="#" class="link accent">Посмотреть услуги</a>
+        <a href="#serv" class="link accent">Посмотреть услуги</a>
       </div>
     </div>
   </div>
