--- a/app/parts/hero.html
+++ b/app/parts/hero.html
@@ -10,10 +10,10 @@
       <div class="col-lg-10 d-lg-block d-none">
         <nav>
           <ul>
-            <li><a href="#" class="link secondary"><span>prosto.</span></a></li>
-            <li><a href="#" class="link secondary">услуги</a></li>
-            <li><a href="#" class="link secondary"><span>prosto.</span>shop</a></li>
-            <li><a href="#" class="link secondary">контакты</a></li>
+            <li><a href="#about" class="link secondary"><span>prosto.</span></a></li>
+            <li><a href="#serv" class="link secondary">услуги</a></li>
+            <li><a href="#shop" class="link secondary"><span>prosto.</span>shop</a></li>
+            <li><a href="#contact" class="link secondary">контакты</a></li>
           </ul>
         </nav>
       </div>
