--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 				<a href="#" class="conf">Политика конфиденциальности</a>
 			</div>
 			<div class="d-lg-flex col-lg-4 d-none align-items-center justify-content-end">
-				<a href="#" class="button accent">Тестовый период</a>
+				<a href="#popup-form" class="popup-form button accent">Тестовый период</a>
 			</div>
 		</div>
 	</div>
