--- a/app/parts/contact.html
+++ b/app/parts/contact.html
@@ -1,4 +1,4 @@
-<div class="contact__wrapper">
+<div class="contact__wrapper" id="contact">
   <div class="container">
     <div class="row">
       <div class="col-lg-12"><h3 class="container_title">Контакты</h3></div>
