--- a/app/parts/shop.html
+++ b/app/parts/shop.html
@@ -1,4 +1,4 @@
-<div class="shop__wrapper soon">
+<div class="shop__wrapper soon" id="shop">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 d-flex justify-content-center">
