--- a/app/parts/top-line.html
+++ b/app/parts/top-line.html
@@ -21,10 +21,10 @@
   <img src="images/dist/logo.png" alt="">
   <nav>
     <ul>
-      <li><a href="#">Prosto</a></li>
-      <li><a href="#">Услуги</a></li>
-      <li><a href="#">Prosto.shop</a></li>
-      <li><a href="#">Контакты</a></li>
+      <li><a href="#about">Prosto</a></li>
+      <li><a href="#serv">Услуги</a></li>
+      <li><a href="#shop">Prosto.shop</a></li>
+      <li><a href="#contact">Контакты</a></li>
     </ul>
   </nav>
   <div class="contact">
