--- a/app/parts/serv.html
+++ b/app/parts/serv.html
@@ -7,8 +7,8 @@
         <div class="block">
           <h3>Фото, видео</h3>
           <p>Создание фото/видео контента <br>под любую задачу.</p>
-          <a href="#" class="d-none d-lg-block link secondary">Подробнее</a>
-          <a href="#" class="d-block d-lg-none button accent">Подробнее</a>
+          <a href="#popup-form" class="d-none d-lg-block popup-form link secondary">Подробнее</a>
+          <a href="#popup-form" class="d-block d-lg-none popup-form button accent">Подробнее</a>
         </div>
       </div>
       <div class="col-lg-4 d-flex align-items-center flex-column">
@@ -16,8 +16,8 @@
         <div class="block">
           <h3>Маркетинг 360</h3>
           <p>Полный спектр услуг <br>в сфере маркетинга.</p>
-          <a href="#" class="d-none d-lg-block link secondary">Подробнее</a>
-          <a href="#" class="d-block d-lg-none button accent">Подробнее</a>
+          <a href="#popup-form" class="d-none d-lg-block popup-form link secondary">Подробнее</a>
+          <a href="#popup-form" class="d-block d-lg-none popup-form button accent">Подробнее</a>
         </div>
       </div>
       <div class="col-lg-4 d-flex align-items-center flex-column">
@@ -25,16 +25,16 @@
         <div class="block">
           <h3>Web-сайт</h3>
           <p>Создание дизайна web-странички,<br> контекстная реклама <br> и верстка на платформе tilda.</p>
-          <a href="#" class="d-none d-lg-block link secondary">Подробнее</a>
-          <a href="#" class="d-block d-lg-none button accent">Подробнее</a>
+          <a href="#popup-form" class="d-none d-lg-block popup-form link secondary">Подробнее</a>
+          <a href="#popup-form" class="d-block d-lg-none popup-form button accent">Подробнее</a>
         </div>
       </div>
 
     </div>
     <div class="row">
       <div class="col-lg-12 d-flex justify-content-center align-items-center">
-        <a href="#" class="d-none d-lg-block link accent">Оставить заявку</a>
-        <a href="#" class="d-block d-lg-none button secondary">Оставить заявку</a>
+        <a href="#popup-form" class="d-none d-lg-block popup-form link accent">Оставить заявку</a>
+        <a href="#popup-form" class="d-block d-lg-none popup-form button secondary">Оставить заявку</a>
       </div>
     </div>
   </div>
